- added ActParams to chart tooltip - fix width for chart with overlap-y

--- a/src/components/MainComponent/MainComponent.module.css
+++ b/src/components/MainComponent/MainComponent.module.css
@@ -1,3 +1,3 @@
 .MainComponent {
-
+margin-bottom: 15px;
 }
