--- a/src/components/VegaLiteChart/VegaLiteChart.module.css
+++ b/src/components/VegaLiteChart/VegaLiteChart.module.css
@@ -1,4 +1,6 @@
 .VegaLiteChart {
     flex: 1;
     margin-top: 2em;
+    height: 280px;
+    overflow-y: auto;
 }
